# Huenicorn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: EmbeddedWebrootFiles.hpp.in  Version.hpp.in
include/FreenSync/: BridgeData.hpp  Color.hpp  Communicator.hpp  Config.hpp  FreenSync.hpp  FreenSyncCore.hpp  ImageData.hpp  ImageProcessing.hpp  ImageProcessor.hpp  Light.hpp  LightSummary.hpp  RequestUtils.hpp  RestServer.hpp  ScreenUtils.hpp  SyncedLight.hpp  TickSynchronizer.hpp
include/Huenicorn/: ApiTools.hpp  BridgeData.hpp  Channel.hpp  Color.hpp  Config.hpp  Credentials.hpp  CurlHttpClient.hpp  Device.hpp  DtlsClient.hpp  DummyGrabber.hpp  EntertainmentConfig.hpp  EntertainmentConfigSelector.hpp  EntertainmentConfiguration.hpp  EntertainmentConfigurationSelector.hpp  HttpRequestUtils.hpp  HuenicornCore.hpp  IGrabber.hpp  IHttpClient.hpp  IPlatformAdapter.hpp  IRestServer.hpp  ImageData.hpp  ImageProcessing.hpp  Interpolation.hpp  JsonCast.hpp  JsonSerializer.hpp  Light.hpp  LightSummary.hpp  Logger.hpp  PipewireGrabber.hpp  PlatformSelector.hpp  RequestUtils.hpp  RestServer.hpp  ScreenUtils.hpp  SetupBackend.hpp  Streamer.hpp  SyncedLight.hpp  TickSynchronizer.hpp  TimingDefinitions.hpp  UV.hpp  WebUIBackend.hpp  (+2 more)
src/: ApiTools.cpp  BridgeData.cpp  Channel.cpp  Communicator.cpp  Config.cpp  Credentials.cpp  CurlHttpClient.cpp  Device.cpp  DtlsClient.cpp  DummyGrabber.cpp  EntertainmentConfigSelector.cpp  EntertainmentConfiguration.cpp  EntertainmentConfigurationSelector.cpp  FreenSync.cpp  FreenSyncCore.cpp  HttpRequestUtils.cpp  HuenicornCore.cpp  ImageProcessing.cpp  ImageProcessor.cpp  Interpolation.cpp  JsonCast.cpp  JsonSerializer.cpp  Light.cpp  Logger.cpp  Main.qml  PipewireGrabber.cpp  PlatformSelector.cpp  RequestUtils.cpp  RestServer.cpp  ScreenUtils.cpp  SetupBackend.cpp  Streamer.cpp  SyncedLight.cpp  TickSynchronizer.cpp  UV.cpp  WebUIBackend.cpp  X11Grabber.cpp  XdgDesktopPortal.cpp  main.cpp
tests/: AddTests.cmake
tests/src/: interpolationTests.cpp
webroot/: 404.html  Channel.js  Display.js  Light.js  Rainbow.js  ScreenWidget.js  Utils.js  Version.js  WebUI.js  index.html  main.js  mainSetup.js  mainWebUI.js  setup.html  style.css
